--- a/style/style.css
+++ b/style/style.css
@@ -5,23 +5,28 @@
 html {
     font-size: 16px;
   }
+  span {
+    font-size: 40px;
+    margin:10px;
+  }
   
   body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'Barlow',sans-serif;
+    font-size: 28px;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0;
     min-height: 100vh;
-    background-color: #f2f2f2;
+    background:linear-gradient(90deg,#9932CC , #483D8B 30%, #483D8B 40%, #191970 );
+    box-shadow: #9932CC;
   }
   
   header {
-    background-color: #4b9ff2;
     width: 100%;
     padding: 24px 0;
-    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
     text-align: center;
+    margin-top:80px;
   }
   
   header h1 {
@@ -42,23 +47,61 @@ html {
     width: 100%;
     max-width: 600px;
     margin-bottom: 24px;
+    flex: 1;
   }
   
   .choice {
-    padding: 16px;
-    background-color: #4b9ff2;
-    color: white;
+    padding: 0; 
+    color: transparent; 
     font-weight: bold;
     border: none;
-    border-radius: 8px;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -50px;
+   
   }
   
   .choice:hover {
-    background-color: #368ee0;
+    cursor: pointer;
+    transform: scale(1.2); 
+    transition: transform 0.2s;
   }
   
   .results p {
     font-size: 1.25rem;
     margin-bottom: 8px;
+  }
+
+  .own {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 50px; 
+  }
+  #rock {
+    background-image: url('https://gas-kvas.com/uploads/posts/2023-01/1674369403_gas-kvas-com-p-risunki-kamnei-3d-40.png');
+    background-size: 90%; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-color:#63ebd2;
+  }
+  #paper {
+    background-image: url('https://www.nicepng.com/png/full/13-138553_manuscript-paper-torn-paper.png');
+    background-size: 90%; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-color:#fa7850;
+    rotate: 345deg;
+  }
+  #scissors {
+    background-image: url('https://www.pinclipart.com/picdir/big/536-5360433_transparent-scissors-and-comb-png-transparent-cartoon-scissors.png');
+    background-size: 75%; 
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-color:#63ebd2;
   }
