--- a/style/style.css
+++ b/style/style.css
@@ -1,11 +1,12 @@
-* {
+  *   {
     box-sizing: border-box;
-}
+  }
 
-html {
+  html {
     font-size: 16px;
   }
-  span {
+ 
+  .icons {
     font-size: 40px;
     margin:10px;
   }
@@ -20,13 +21,14 @@ html {
     min-height: 100vh;
     background:linear-gradient(90deg,#9932CC , #483D8B 30%, #483D8B 40%, #191970 );
     box-shadow: #9932CC;
+    color:white;
   }
   
   header {
     width: 100%;
-    padding: 24px 0;
+    padding: 16px 0; 
     text-align: center;
-    margin-top:80px;
+    margin-top: 40px; 
   }
   
   header h1 {
@@ -38,7 +40,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 48px 0;
+    padding: 24px 0; 
   }
   
   .choices {
@@ -72,16 +74,18 @@ html {
     transition: transform 0.2s;
   }
   
-  .results p {
-    font-size: 1.25rem;
-    margin-bottom: 8px;
-  }
+   
+    .results span {
+      font-size: 1.25rem;
+      margin-bottom: 8px;
+      min-height: 1.25rem;
+    }
 
   .own {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px; 
+    margin: 90px; 
   }
   #rock {
     background-image: url('https://gas-kvas.com/uploads/posts/2023-01/1674369403_gas-kvas-com-p-risunki-kamnei-3d-40.png');
@@ -105,3 +109,63 @@ html {
     background-repeat: no-repeat;
     background-color:#63ebd2;
   }
+
+
+  .results {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    position: relative;
+    left:30%;
+  }
+  .result-item {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .modal {
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    padding: 30px;
+    border-radius: 50%;
+    background-color: #c951bd;
+    text-align: center;
+    font-size: 30px;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 1s ease-in-out;
+  }
+  .modal.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .modal-title {
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom:15px;
+  }
+  
+  .btn-restart {
+    padding: 10px 20px;
+    
+    margin-bottom: 15px;
+  }
+  #restartBtn {
+    background-color:white;
+  }
+  .footer {
+    padding: 10px;
+    font-size: 20px;
+  }
+  .content {
+    flex: 1;
+  }
+  a {
+    text-decoration: none;
+    color:white;
+  }
+  
+    
